entrega 4 (2)/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     seen_program -> <empty>
Rule 2     programa -> seen_program declaracion TkExecute instlist TkDone
Rule 3     programa -> seen_program TkExecute instlist TkDone
Rule 4     term -> TkNum
Rule 5     term -> TkTrue
Rule 6     term -> TkFalse
Rule 7     term -> TkIdent
Rule 8     exp_un -> TkResta exp
Rule 9     exp_un -> TkNegacion exp
Rule 10    exp_un -> TkInspeccion exp
Rule 11    exp -> term
Rule 12    exp -> exp_un
Rule 13    exp -> TkParAbre exp TkParCierra
Rule 14    exp -> TkCorcheteAbre exp TkCorcheteCierra
Rule 15    exp -> TkLlaveAbre exp TkLlaveCierra
Rule 16    exp -> exp TkMas exp
Rule 17    exp -> exp TkMult exp
Rule 18    exp -> exp TkMod exp
Rule 19    exp -> exp TkDiv exp
Rule 20    exp -> exp TkResta exp
Rule 21    exp -> exp TkIgual exp
Rule 22    exp -> exp TkDesigual exp
Rule 23    exp -> exp TkMenor exp
Rule 24    exp -> exp TkMayor exp
Rule 25    exp -> exp TkMenorIgual exp
Rule 26    exp -> exp TkMayorIgual exp
Rule 27    exp -> exp TkDisyuncion exp
Rule 28    exp -> exp TkConjuncion exp
Rule 29    exp -> exp TkConcat exp
Rule 30    instruccion -> TkIdent TkAsignacion exp
Rule 31    instruccion -> TkRead exp
Rule 32    instruccion -> TkWrite exp
Rule 33    instruccion -> TkWhile exp TkDo instlist TkDone
Rule 34    instruccion -> TkFor TkIdent TkFrom exp TkTo exp TkDo instlist TkDone
Rule 35    instruccion -> TkFor exp TkTo exp TkDo instlist TkDone
Rule 36    instruccion -> TkIf exp TkThen instlist TkDone
Rule 37    instruccion -> TkIf exp TkThen instlist TkElse instlist TkDone
Rule 38    instruccion -> declaracion TkExecute instlist TkDone
Rule 39    instruccion -> TkExecute instlist TkDone
Rule 40    instruccion -> TkLlaveAbre lista_tape TkLlaveCierra TkAt ident_tape
Rule 41    ident_tape -> TkCorcheteAbre exp TkCorcheteCierra
Rule 42    ident_tape -> TkIdent
Rule 43    lista_tape -> lista_tape simb_tape
Rule 44    lista_tape -> simb_tape
Rule 45    simb_tape -> TkPunto
Rule 46    simb_tape -> TkMayor
Rule 47    simb_tape -> TkMenor
Rule 48    simb_tape -> TkMas
Rule 49    simb_tape -> TkResta
Rule 50    simb_tape -> TkComa
Rule 51    instlist -> instlist semicoloninst
Rule 52    instlist -> instruccion
Rule 53    semicoloninst -> TkPuntoYComa instruccion
Rule 54    declaracion -> TkDeclare declist
Rule 55    declist -> dec TkPuntoYComa declist
Rule 56    declist -> dec
Rule 57    dec -> varlist TkType tipo
Rule 58    varlist -> TkIdent TkComa varlist
Rule 59    varlist -> TkIdent
Rule 60    tipo -> TkInteger
Rule 61    tipo -> TkBoolean
Rule 62    tipo -> TkTape

Terminals, with rules where they appear

TkAsignacion         : 30
TkAt                 : 40
TkBoolean            : 61
TkComa               : 50 58
TkConcat             : 29
TkConjuncion         : 28
TkCorcheteAbre       : 14 41
TkCorcheteCierra     : 14 41
TkDeclare            : 54
TkDesigual           : 22
TkDisyuncion         : 27
TkDiv                : 19
TkDo                 : 33 34 35
TkDone               : 2 3 33 34 35 36 37 38 39
TkElse               : 37
TkExecute            : 2 3 38 39
TkFalse              : 6
TkFor                : 34 35
TkFrom               : 34
TkIdent              : 7 30 34 42 58 59
TkIf                 : 36 37
TkIgual              : 21
TkInspeccion         : 10
TkInteger            : 60
TkLlaveAbre          : 15 40
TkLlaveCierra        : 15 40
TkMas                : 16 48
TkMayor              : 24 46
TkMayorIgual         : 26
TkMenor              : 23 47
TkMenorIgual         : 25
TkMod                : 18
TkMult               : 17
TkNegacion           : 9
TkNum                : 4
TkParAbre            : 13
TkParCierra          : 13
TkPunto              : 45
TkPuntoYComa         : 53 55
TkRead               : 31
TkResta              : 8 20 49
TkTape               : 62
TkThen               : 36 37
TkTo                 : 34 35
TkTrue               : 5
TkType               : 57
TkWhile              : 33
TkWrite              : 32
error                : 

Nonterminals, with rules where they appear

dec                  : 55 56
declaracion          : 2 38
declist              : 54 55
exp                  : 8 9 10 13 14 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 31 32 33 34 34 35 35 36 37 41
exp_un               : 12
ident_tape           : 40
instlist             : 2 3 33 34 35 36 37 37 38 39 51
instruccion          : 52 53
lista_tape           : 40 43
programa             : 0
seen_program         : 2 3
semicoloninst        : 51
simb_tape            : 43 44
term                 : 11
tipo                 : 57
varlist              : 57 58

Parsing method: LALR

state 0

    (0) S' -> . programa
    (2) programa -> . seen_program declaracion TkExecute instlist TkDone
    (3) programa -> . seen_program TkExecute instlist TkDone
    (1) seen_program -> .

    TkExecute       reduce using rule 1 (seen_program -> .)
    TkDeclare       reduce using rule 1 (seen_program -> .)

    seen_program                   shift and go to state 1
    programa                       shift and go to state 2

state 1

    (2) programa -> seen_program . declaracion TkExecute instlist TkDone
    (3) programa -> seen_program . TkExecute instlist TkDone
    (54) declaracion -> . TkDeclare declist

    TkExecute       shift and go to state 3
    TkDeclare       shift and go to state 5

    declaracion                    shift and go to state 4

state 2

    (0) S' -> programa .



state 3

    (3) programa -> seen_program TkExecute . instlist TkDone
    (51) instlist -> . instlist semicoloninst
    (52) instlist -> . instruccion
    (30) instruccion -> . TkIdent TkAsignacion exp
    (31) instruccion -> . TkRead exp
    (32) instruccion -> . TkWrite exp
    (33) instruccion -> . TkWhile exp TkDo instlist TkDone
    (34) instruccion -> . TkFor TkIdent TkFrom exp TkTo exp TkDo instlist TkDone
    (35) instruccion -> . TkFor exp TkTo exp TkDo instlist TkDone
    (36) instruccion -> . TkIf exp TkThen instlist TkDone
    (37) instruccion -> . TkIf exp TkThen instlist TkElse instlist TkDone
    (38) instruccion -> . declaracion TkExecute instlist TkDone
    (39) instruccion -> . TkExecute instlist TkDone
    (40) instruccion -> . TkLlaveAbre lista_tape TkLlaveCierra TkAt ident_tape
    (54) declaracion -> . TkDeclare declist

    TkIdent         shift and go to state 8
    TkRead          shift and go to state 7
    TkWrite         shift and go to state 15
    TkWhile         shift and go to state 9
    TkFor           shift and go to state 10
    TkIf            shift and go to state 6
    TkExecute       shift and go to state 13
    TkLlaveAbre     shift and go to state 14
    TkDeclare       shift and go to state 5

    instruccion                    shift and go to state 11
    instlist                       shift and go to state 12
    declaracion                    shift and go to state 16

state 4

    (2) programa -> seen_program declaracion . TkExecute instlist TkDone

    TkExecute       shift and go to state 17


state 5

    (54) declaracion -> TkDeclare . declist
    (55) declist -> . dec TkPuntoYComa declist
    (56) declist -> . dec
    (57) dec -> . varlist TkType tipo
    (58) varlist -> . TkIdent TkComa varlist
    (59) varlist -> . TkIdent

    TkIdent         shift and go to state 20

    varlist                        shift and go to state 19
    dec                            shift and go to state 21
    declist                        shift and go to state 18

state 6

    (36) instruccion -> TkIf . exp TkThen instlist TkDone
    (37) instruccion -> TkIf . exp TkThen instlist TkElse instlist TkDone
    (11) exp -> . term
    (12) exp -> . exp_un
    (13) exp -> . TkParAbre exp TkParCierra
    (14) exp -> . TkCorcheteAbre exp TkCorcheteCierra
    (15) exp -> . TkLlaveAbre exp TkLlaveCierra
    (16) exp -> . exp TkMas exp
    (17) exp -> . exp TkMult exp
    (18) exp -> . exp TkMod exp
    (19) exp -> . exp TkDiv exp
    (20) exp -> . exp TkResta exp
    (21) exp -> . exp TkIgual exp
    (22) exp -> . exp TkDesigual exp
    (23) exp -> . exp TkMenor exp
    (24) exp -> . exp TkMayor exp
    (25) exp -> . exp TkMenorIgual exp
    (26) exp -> . exp TkMayorIgual exp
    (27) exp -> . exp TkDisyuncion exp
    (28) exp -> . exp TkConjuncion exp
    (29) exp -> . exp TkConcat exp
    (4) term -> . TkNum
    (5) term -> . TkTrue
    (6) term -> . TkFalse
    (7) term -> . TkIdent
    (8) exp_un -> . TkResta exp
    (9) exp_un -> . TkNegacion exp
    (10) exp_un -> . TkInspeccion exp

    TkParAbre       shift and go to state 27
    TkCorcheteAbre  shift and go to state 33
    TkLlaveAbre     shift and go to state 31
    TkNum           shift and go to state 26
    TkTrue          shift and go to state 23
    TkFalse         shift and go to state 25
    TkIdent         shift and go to state 28
    TkResta         shift and go to state 22
    TkNegacion      shift and go to state 24
    TkInspeccion    shift and go to state 34

    term                           shift and go to state 30
    exp                            shift and go to state 32
    exp_un                         shift and go to state 29

state 7

    (31) instruccion -> TkRead . exp
    (11) exp -> . term
    (12) exp -> . exp_un
    (13) exp -> . TkParAbre exp TkParCierra
    (14) exp -> . TkCorcheteAbre exp TkCorcheteCierra
    (15) exp -> . TkLlaveAbre exp TkLlaveCierra
    (16) exp -> . exp TkMas exp
    (17) exp -> . exp TkMult exp
    (18) exp -> . exp TkMod exp
    (19) exp -> . exp TkDiv exp
    (20) exp -> . exp TkResta exp
    (21) exp -> . exp TkIgual exp
    (22) exp -> . exp TkDesigual exp
    (23) exp -> . exp TkMenor exp
    (24) exp -> . exp TkMayor exp
    (25) exp -> . exp TkMenorIgual exp
    (26) exp -> . exp TkMayorIgual exp
    (27) exp -> . exp TkDisyuncion exp
    (28) exp -> . exp TkConjuncion exp
    (29) exp -> . exp TkConcat exp
    (4) term -> . TkNum
    (5) term -> . TkTrue
    (6) term -> . TkFalse
    (7) term -> . TkIdent
    (8) exp_un -> . TkResta exp
    (9) exp_un -> . TkNegacion exp
    (10) exp_un -> . TkInspeccion exp

    TkParAbre       shift and go to state 27
    TkCorcheteAbre  shift and go to state 33
    TkLlaveAbre     shift and go to state 31
    TkNum           shift and go to state 26
    TkTrue          shift and go to state 23
    TkFalse         shift and go to state 25
    TkIdent         shift and go to state 28
    TkResta         shift and go to state 22
    TkNegacion      shift and go to state 24
    TkInspeccion    shift and go to state 34

    term                           shift and go to state 30
    exp                            shift and go to state 35
    exp_un                         shift and go to state 29

state 8

    (30) instruccion -> TkIdent . TkAsignacion exp

    TkAsignacion    shift and go to state 36


state 9

    (33) instruccion -> TkWhile . exp TkDo instlist TkDone
    (11) exp -> . term
    (12) exp -> . exp_un
    (13) exp -> . TkParAbre exp TkParCierra
    (14) exp -> . TkCorcheteAbre exp TkCorcheteCierra
    (15) exp -> . TkLlaveAbre exp TkLlaveCierra
    (16) exp -> . exp TkMas exp
    (17) exp -> . exp TkMult exp
    (18) exp -> . exp TkMod exp
    (19) exp -> . exp TkDiv exp
    (20) exp -> . exp TkResta exp
    (21) exp -> . exp TkIgual exp
    (22) exp -> . exp TkDesigual exp
    (23) exp -> . exp TkMenor exp
    (24) exp -> . exp TkMayor exp
    (25) exp -> . exp TkMenorIgual exp
    (26) exp -> . exp TkMayorIgual exp
    (27) exp -> . exp TkDisyuncion exp
    (28) exp -> . exp TkConjuncion exp
    (29) exp -> . exp TkConcat exp
    (4) term -> . TkNum
    (5) term -> . TkTrue
    (6) term -> . TkFalse
    (7) term -> . TkIdent
    (8) exp_un -> . TkResta exp
    (9) exp_un -> . TkNegacion exp
    (10) exp_un -> . TkInspeccion exp

    TkParAbre       shift and go to state 27
    TkCorcheteAbre  shift and go to state 33
    TkLlaveAbre     shift and go to state 31
    TkNum           shift and go to state 26
    TkTrue          shift and go to state 23
    TkFalse         shift and go to state 25
    TkIdent         shift and go to state 28
    TkResta         shift and go to state 22
    TkNegacion      shift and go to state 24
    TkInspeccion    shift and go to state 34

    term                           shift and go to state 30
    exp                            shift and go to state 37
    exp_un                         shift and go to state 29

state 10

    (34) instruccion -> TkFor . TkIdent TkFrom exp TkTo exp TkDo instlist TkDone
    (35) instruccion -> TkFor . exp TkTo exp TkDo instlist TkDone
    (11) exp -> . term
    (12) exp -> . exp_un
    (13) exp -> . TkParAbre exp TkParCierra
    (14) exp -> . TkCorcheteAbre exp TkCorcheteCierra
    (15) exp -> . TkLlaveAbre exp TkLlaveCierra
    (16) exp -> . exp TkMas exp
    (17) exp -> . exp TkMult exp
    (18) exp -> . exp TkMod exp
    (19) exp -> . exp TkDiv exp
    (20) exp -> . exp TkResta exp
    (21) exp -> . exp TkIgual exp
    (22) exp -> . exp TkDesigual exp
    (23) exp -> . exp TkMenor exp
    (24) exp -> . exp TkMayor exp
    (25) exp -> . exp TkMenorIgual exp
    (26) exp -> . exp TkMayorIgual exp
    (27) exp -> . exp TkDisyuncion exp
    (28) exp -> . exp TkConjuncion exp
    (29) exp -> . exp TkConcat exp
    (4) term -> . TkNum
    (5) term -> . TkTrue
    (6) term -> . TkFalse
    (7) term -> . TkIdent
    (8) exp_un -> . TkResta exp
    (9) exp_un -> . TkNegacion exp
    (10) exp_un -> . TkInspeccion exp

    TkIdent         shift and go to state 38
    TkParAbre       shift and go to state 27
    TkCorcheteAbre  shift and go to state 33
    TkLlaveAbre     shift and go to state 31
    TkNum           shift and go to state 26
    TkTrue          shift and go to state 23
    TkFalse         shift and go to state 25
    TkResta         shift and go to state 22
    TkNegacion      shift and go to state 24
    TkInspeccion    shift and go to state 34

    term                           shift and go to state 30
    exp                            shift and go to state 39
    exp_un                         shift and go to state 29

state 11

    (52) instlist -> instruccion .

    TkDone          reduce using rule 52 (instlist -> instruccion .)
    TkPuntoYComa    reduce using rule 52 (instlist -> instruccion .)
    TkElse          reduce using rule 52 (instlist -> instruccion .)


state 12

    (3) programa -> seen_program TkExecute instlist . TkDone
    (51) instlist -> instlist . semicoloninst
    (53) semicoloninst -> . TkPuntoYComa instruccion

    TkDone          shift and go to state 42
    TkPuntoYComa    shift and go to state 40

    semicoloninst                  shift and go to state 41

state 13

    (39) instruccion -> TkExecute . instlist TkDone
    (51) instlist -> . instlist semicoloninst
    (52) instlist -> . instruccion
    (30) instruccion -> . TkIdent TkAsignacion exp
    (31) instruccion -> . TkRead exp
    (32) instruccion -> . TkWrite exp
    (33) instruccion -> . TkWhile exp TkDo instlist TkDone
    (34) instruccion -> . TkFor TkIdent TkFrom exp TkTo exp TkDo instlist TkDone
    (35) instruccion -> . TkFor exp TkTo exp TkDo instlist TkDone
    (36) instruccion -> . TkIf exp TkThen instlist TkDone
    (37) instruccion -> . TkIf exp TkThen instlist TkElse instlist TkDone
    (38) instruccion -> . declaracion TkExecute instlist TkDone
    (39) instruccion -> . TkExecute instlist TkDone
    (40) instruccion -> . TkLlaveAbre lista_tape TkLlaveCierra TkAt ident_tape
    (54) declaracion -> . TkDeclare declist

    TkIdent         shift and go to state 8
    TkRead          shift and go to state 7
    TkWrite         shift and go to state 15
    TkWhile         shift and go to state 9
    TkFor           shift and go to state 10
    TkIf            shift and go to state 6
    TkExecute       shift and go to state 13
    TkLlaveAbre     shift and go to state 14
    TkDeclare       shift and go to state 5

    instruccion                    shift and go to state 11
    instlist                       shift and go to state 43
    declaracion                    shift and go to state 16

state 14

    (40) instruccion -> TkLlaveAbre . lista_tape TkLlaveCierra TkAt ident_tape
    (43) lista_tape -> . lista_tape simb_tape
    (44) lista_tape -> . simb_tape
    (45) simb_tape -> . TkPunto
    (46) simb_tape -> . TkMayor
    (47) simb_tape -> . TkMenor
    (48) simb_tape -> . TkMas
    (49) simb_tape -> . TkResta
    (50) simb_tape -> . TkComa

    TkPunto         shift and go to state 45
    TkMayor         shift and go to state 47
    TkMenor         shift and go to state 48
    TkMas           shift and go to state 50
    TkResta         shift and go to state 44
    TkComa          shift and go to state 46

    simb_tape                      shift and go to state 49
    lista_tape                     shift and go to state 51

state 15

    (32) instruccion -> TkWrite . exp
    (11) exp -> . term
    (12) exp -> . exp_un
    (13) exp -> . TkParAbre exp TkParCierra
    (14) exp -> . TkCorcheteAbre exp TkCorcheteCierra
    (15) exp -> . TkLlaveAbre exp TkLlaveCierra
    (16) exp -> . exp TkMas exp
    (17) exp -> . exp TkMult exp
    (18) exp -> . exp TkMod exp
    (19) exp -> . exp TkDiv exp
    (20) exp -> . exp TkResta exp
    (21) exp -> . exp TkIgual exp
    (22) exp -> . exp TkDesigual exp
    (23) exp -> . exp TkMenor exp
    (24) exp -> . exp TkMayor exp
    (25) exp -> . exp TkMenorIgual exp
    (26) exp -> . exp TkMayorIgual exp
    (27) exp -> . exp TkDisyuncion exp
    (28) exp -> . exp TkConjuncion exp
    (29) exp -> . exp TkConcat exp
    (4) term -> . TkNum
    (5) term -> . TkTrue
    (6) term -> . TkFalse
    (7) term -> . TkIdent
    (8) exp_un -> . TkResta exp
    (9) exp_un -> . TkNegacion exp
    (10) exp_un -> . TkInspeccion exp

    TkParAbre       shift and go to state 27
    TkCorcheteAbre  shift and go to state 33
    TkLlaveAbre     shift and go to state 31
    TkNum           shift and go to state 26
    TkTrue          shift and go to state 23
    TkFalse         shift and go to state 25
    TkIdent         shift and go to state 28
    TkResta         shift and go to state 22
    TkNegacion      shift and go to state 24
    TkInspeccion    shift and go to state 34

    term                           shift and go to state 30
    exp                            shift and go to state 52
    exp_un                         shift and go to state 29

state 16

    (38) instruccion -> declaracion . TkExecute instlist TkDone

    TkExecute       shift and go to state 53


state 17

    (2) programa -> seen_program declaracion TkExecute . instlist TkDone
    (51) instlist -> . instlist semicoloninst
    (52) instlist -> . instruccion
    (30) instruccion -> . TkIdent TkAsignacion exp
    (31) instruccion -> . TkRead exp
    (32) instruccion -> . TkWrite exp
    (33) instruccion -> . TkWhile exp TkDo instlist TkDone
    (34) instruccion -> . TkFor TkIdent TkFrom exp TkTo exp TkDo instlist TkDone
    (35) instruccion -> . TkFor exp TkTo exp TkDo instlist TkDone
    (36) instruccion -> . TkIf exp TkThen instlist TkDone
    (37) instruccion -> . TkIf exp TkThen instlist TkElse instlist TkDone
    (38) instruccion -> . declaracion TkExecute instlist TkDone
    (39) instruccion -> . TkExecute instlist TkDone
    (40) instruccion -> . TkLlaveAbre lista_tape TkLlaveCierra TkAt ident_tape
    (54) declaracion -> . TkDeclare declist

    TkIdent         shift and go to state 8
    TkRead          shift and go to state 7
    TkWrite         shift and go to state 15
    TkWhile         shift and go to state 9
    TkFor           shift and go to state 10
    TkIf            shift and go to state 6
    TkExecute       shift and go to state 13
    TkLlaveAbre     shift and go to state 14
    TkDeclare       shift and go to state 5

    instruccion                    shift and go to state 11
    instlist                       shift and go to state 54
    declaracion                    shift and go to state 16

state 18

    (54) declaracion -> TkDeclare declist .

    TkExecute       reduce using rule 54 (declaracion -> TkDeclare declist .)


state 19

    (57) dec -> varlist . TkType tipo

    TkType          shift and go to state 55


state 20

    (58) varlist -> TkIdent . TkComa varlist
    (59) varlist -> TkIdent .

    TkComa          shift and go to state 56
    TkType          reduce using rule 59 (varlist -> TkIdent .)


state 21

    (55) declist -> dec . TkPuntoYComa declist
    (56) declist -> dec .

    TkPuntoYComa    shift and go to state 57
    TkExecute       reduce using rule 56 (declist -> dec .)


state 22

    (8) exp_un -> TkResta . exp
    (11) exp -> . term
    (12) exp -> . exp_un
    (13) exp -> . TkParAbre exp TkParCierra
    (14) exp -> . TkCorcheteAbre exp TkCorcheteCierra
    (15) exp -> . TkLlaveAbre exp TkLlaveCierra
    (16) exp -> . exp TkMas exp
    (17) exp -> . exp TkMult exp
    (18) exp -> . exp TkMod exp
    (19) exp -> . exp TkDiv exp
    (20) exp -> . exp TkResta exp
    (21) exp -> . exp TkIgual exp
    (22) exp -> . exp TkDesigual exp
    (23) exp -> . exp TkMenor exp
    (24) exp -> . exp TkMayor exp
    (25) exp -> . exp TkMenorIgual exp
    (26) exp -> . exp TkMayorIgual exp
    (27) exp -> . exp TkDisyuncion exp
    (28) exp -> . exp TkConjuncion exp
    (29) exp -> . exp TkConcat exp
    (4) term -> . TkNum
    (5) term -> . TkTrue
    (6) term -> . TkFalse
    (7) term -> . TkIdent
    (8) exp_un -> . TkResta exp
    (9) exp_un -> . TkNegacion exp
    (10) exp_un -> . TkInspeccion exp

    TkParAbre       shift and go to state 27
    TkCorcheteAbre  shift and go to state 33
    TkLlaveAbre     shift and go to state 31
    TkNum           shift and go to state 26
    TkTrue          shift and go to state 23
    TkFalse         shift and go to state 25
    TkIdent         shift and go to state 28
    TkResta         shift and go to state 22
    TkNegacion      shift and go to state 24
    TkInspeccion    shift and go to state 34

    term                           shift and go to state 30
    exp                            shift and go to state 58
    exp_un                         shift and go to state 29

state 23

    (5) term -> TkTrue .

    TkMas           reduce using rule 5 (term -> TkTrue .)
    TkMult          reduce using rule 5 (term -> TkTrue .)
    TkMod           reduce using rule 5 (term -> TkTrue .)
    TkDiv           reduce using rule 5 (term -> TkTrue .)
    TkResta         reduce using rule 5 (term -> TkTrue .)
    TkIgual         reduce using rule 5 (term -> TkTrue .)
    TkDesigual      reduce using rule 5 (term -> TkTrue .)
    TkMenor         reduce using rule 5 (term -> TkTrue .)
    TkMayor         reduce using rule 5 (term -> TkTrue .)
    TkMenorIgual    reduce using rule 5 (term -> TkTrue .)
    TkMayorIgual    reduce using rule 5 (term -> TkTrue .)
    TkDisyuncion    reduce using rule 5 (term -> TkTrue .)
    TkConjuncion    reduce using rule 5 (term -> TkTrue .)
    TkConcat        reduce using rule 5 (term -> TkTrue .)
    TkThen          reduce using rule 5 (term -> TkTrue .)
    TkDone          reduce using rule 5 (term -> TkTrue .)
    TkPuntoYComa    reduce using rule 5 (term -> TkTrue .)
    TkElse          reduce using rule 5 (term -> TkTrue .)
    TkDo            reduce using rule 5 (term -> TkTrue .)
    TkTo            reduce using rule 5 (term -> TkTrue .)
    TkParCierra     reduce using rule 5 (term -> TkTrue .)
    TkLlaveCierra   reduce using rule 5 (term -> TkTrue .)
    TkCorcheteCierra reduce using rule 5 (term -> TkTrue .)


state 24

    (9) exp_un -> TkNegacion . exp
    (11) exp -> . term
    (12) exp -> . exp_un
    (13) exp -> . TkParAbre exp TkParCierra
    (14) exp -> . TkCorcheteAbre exp TkCorcheteCierra
    (15) exp -> . TkLlaveAbre exp TkLlaveCierra
    (16) exp -> . exp TkMas exp
    (17) exp -> . exp TkMult exp
    (18) exp -> . exp TkMod exp
    (19) exp -> . exp TkDiv exp
    (20) exp -> . exp TkResta exp
    (21) exp -> . exp TkIgual exp
    (22) exp -> . exp TkDesigual exp
    (23) exp -> . exp TkMenor exp
    (24) exp -> . exp TkMayor exp
    (25) exp -> . exp TkMenorIgual exp
    (26) exp -> . exp TkMayorIgual exp
    (27) exp -> . exp TkDisyuncion exp
    (28) exp -> . exp TkConjuncion exp
    (29) exp -> . exp TkConcat exp
    (4) term -> . TkNum
    (5) term -> . TkTrue
    (6) term -> . TkFalse
    (7) term -> . TkIdent
    (8) exp_un -> . TkResta exp
    (9) exp_un -> . TkNegacion exp
    (10) exp_un -> . TkInspeccion exp

    TkParAbre       shift and go to state 27
    TkCorcheteAbre  shift and go to state 33
    TkLlaveAbre     shift and go to state 31
    TkNum           shift and go to state 26
    TkTrue          shift and go to state 23
    TkFalse         shift and go to state 25
    TkIdent         shift and go to state 28
    TkResta         shift and go to state 22
    TkNegacion      shift and go to state 24
    TkInspeccion    shift and go to state 34

    term                           shift and go to state 30
    exp                            shift and go to state 59
    exp_un                         shift and go to state 29

state 25

    (6) term -> TkFalse .

    TkMas           reduce using rule 6 (term -> TkFalse .)
    TkMult          reduce using rule 6 (term -> TkFalse .)
    TkMod           reduce using rule 6 (term -> TkFalse .)
    TkDiv           reduce using rule 6 (term -> TkFalse .)
    TkResta         reduce using rule 6 (term -> TkFalse .)
    TkIgual         reduce using rule 6 (term -> TkFalse .)
    TkDesigual      reduce using rule 6 (term -> TkFalse .)
    TkMenor         reduce using rule 6 (term -> TkFalse .)
    TkMayor         reduce using rule 6 (term -> TkFalse .)
    TkMenorIgual    reduce using rule 6 (term -> TkFalse .)
    TkMayorIgual    reduce using rule 6 (term -> TkFalse .)
    TkDisyuncion    reduce using rule 6 (term -> TkFalse .)
    TkConjuncion    reduce using rule 6 (term -> TkFalse .)
    TkConcat        reduce using rule 6 (term -> TkFalse .)
    TkThen          reduce using rule 6 (term -> TkFalse .)
    TkDone          reduce using rule 6 (term -> TkFalse .)
    TkPuntoYComa    reduce using rule 6 (term -> TkFalse .)
    TkElse          reduce using rule 6 (term -> TkFalse .)
    TkDo            reduce using rule 6 (term -> TkFalse .)
    TkTo            reduce using rule 6 (term -> TkFalse .)
    TkParCierra     reduce using rule 6 (term -> TkFalse .)
    TkLlaveCierra   reduce using rule 6 (term -> TkFalse .)
    TkCorcheteCierra reduce using rule 6 (term -> TkFalse .)


state 26

    (4) term -> TkNum .

    TkMas           reduce using rule 4 (term -> TkNum .)
    TkMult          reduce using rule 4 (term -> TkNum .)
    TkMod           reduce using rule 4 (term -> TkNum .)
    TkDiv           reduce using rule 4 (term -> TkNum .)
    TkResta         reduce using rule 4 (term -> TkNum .)
    TkIgual         reduce using rule 4 (term -> TkNum .)
    TkDesigual      reduce using rule 4 (term -> TkNum .)
    TkMenor         reduce using rule 4 (term -> TkNum .)
    TkMayor         reduce using rule 4 (term -> TkNum .)
    TkMenorIgual    reduce using rule 4 (term -> TkNum .)
    TkMayorIgual    reduce using rule 4 (term -> TkNum .)
    TkDisyuncion    reduce using rule 4 (term -> TkNum .)
    TkConjuncion    reduce using rule 4 (term -> TkNum .)
    TkConcat        reduce using rule 4 (term -> TkNum .)
    TkThen          reduce using rule 4 (term -> TkNum .)
    TkDone          reduce using rule 4 (term -> TkNum .)
    TkPuntoYComa    reduce using rule 4 (term -> TkNum .)
    TkElse          reduce using rule 4 (term -> TkNum .)
    TkDo            reduce using rule 4 (term -> TkNum .)
    TkTo            reduce using rule 4 (term -> TkNum .)
    TkParCierra     reduce using rule 4 (term -> TkNum .)
    TkLlaveCierra   reduce using rule 4 (term -> TkNum .)
    TkCorcheteCierra reduce using rule 4 (term -> TkNum .)


state 27

    (13) exp -> TkParAbre . exp TkParCierra
    (11) exp -> . term
    (12) exp -> . exp_un
    (13) exp -> . TkParAbre exp TkParCierra
    (14) exp -> . TkCorcheteAbre exp TkCorcheteCierra
    (15) exp -> . TkLlaveAbre exp TkLlaveCierra
    (16) exp -> . exp TkMas exp
    (17) exp -> . exp TkMult exp
    (18) exp -> . exp TkMod exp
    (19) exp -> . exp TkDiv exp
    (20) exp -> . exp TkResta exp
    (21) exp -> . exp TkIgual exp
    (22) exp -> . exp TkDesigual exp
    (23) exp -> . exp TkMenor exp
    (24) exp -> . exp TkMayor exp
    (25) exp -> . exp TkMenorIgual exp
    (26) exp -> . exp TkMayorIgual exp
    (27) exp -> . exp TkDisyuncion exp
    (28) exp -> . exp TkConjuncion exp
    (29) exp -> . exp TkConcat exp
    (4) term -> . TkNum
    (5) term -> . TkTrue
    (6) term -> . TkFalse
    (7) term -> . TkIdent
    (8) exp_un -> . TkResta exp
    (9) exp_un -> . TkNegacion exp
    (10) exp_un -> . TkInspeccion exp

    TkParAbre       shift and go to state 27
    TkCorcheteAbre  shift and go to state 33
    TkLlaveAbre     shift and go to state 31
    TkNum           shift and go to state 26
    TkTrue          shift and go to state 23
    TkFalse         shift and go to state 25
    TkIdent         shift and go to state 28
    TkResta         shift and go to state 22
    TkNegacion      shift and go to state 24
    TkInspeccion    shift and go to state 34

    term                           shift and go to state 30
    exp                            shift and go to state 60
    exp_un                         shift and go to state 29

state 28

    (7) term -> TkIdent .

    TkMas           reduce using rule 7 (term -> TkIdent .)
    TkMult          reduce using rule 7 (term -> TkIdent .)
    TkMod           reduce using rule 7 (term -> TkIdent .)
    TkDiv           reduce using rule 7 (term -> TkIdent .)
    TkResta         reduce using rule 7 (term -> TkIdent .)
    TkIgual         reduce using rule 7 (term -> TkIdent .)
    TkDesigual      reduce using rule 7 (term -> TkIdent .)
    TkMenor         reduce using rule 7 (term -> TkIdent .)
    TkMayor         reduce using rule 7 (term -> TkIdent .)
    TkMenorIgual    reduce using rule 7 (term -> TkIdent .)
    TkMayorIgual    reduce using rule 7 (term -> TkIdent .)
    TkDisyuncion    reduce using rule 7 (term -> TkIdent .)
    TkConjuncion    reduce using rule 7 (term -> TkIdent .)
    TkConcat        reduce using rule 7 (term -> TkIdent .)
    TkThen          reduce using rule 7 (term -> TkIdent .)
    TkDone          reduce using rule 7 (term -> TkIdent .)
    TkPuntoYComa    reduce using rule 7 (term -> TkIdent .)
    TkElse          reduce using rule 7 (term -> TkIdent .)
    TkDo            reduce using rule 7 (term -> TkIdent .)
    TkTo            reduce using rule 7 (term -> TkIdent .)
    TkParCierra     reduce using rule 7 (term -> TkIdent .)
    TkLlaveCierra   reduce using rule 7 (term -> TkIdent .)
    TkCorcheteCierra reduce using rule 7 (term -> TkIdent .)


state 29

    (12) exp -> exp_un .
